--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@ tbody tr:hover {
             };
 
 		document.getElementById("viewOrdersBtn").addEventListener("click", () => {
-  window.location.href = "index.html";  // redirects to dashboard
+  window.location.href = "admin.html";  // redirects to dashboard
 });
 
 
